fixing javascript issue

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,11 @@
       <link rel="stylesheet" href="css/easy-responsive-tabs.css" type="text/css" media="all" /> 
       <!-- <link href="//fonts.googleapis.com/css?family=Slabo+27px&amp;subset=latin-ext" rel="stylesheet"> -->
       <!-- <link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet"> -->
+       <!-- Fonts to support Material Design -->
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+      <!-- Icons to support Material Design -->
+      <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+ 
 
       <title>React App</title>
   </head>
@@ -162,61 +167,8 @@
       
           });
         </script>
-        <!-- //here ends scrolling icon -->
-      	<!-- //Footer -->
 
-	<!-- <a href="#home" class="scroll" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a> -->
-	<!-- //smooth scrolling -->
-
-
-	<!-- <script type='text/javascript' src='js/jquery-2.2.3.min.js'></script>
-	<script src="js/jquery.waypoints.min.js"></script>
-	<script src="js/jquery.countup.js"></script>
-	<script>
-		$('.counter').countUp();
-	</script>
-	<script defer src="js/jquery.flexslider.js"></script>
-	<script type="text/javascript">
-		$(window).load(function () {
-			$('.flexslider').flexslider({
-				animation: "slide",
-				start: function (slider) {
-					$('body').removeClass('loading');
-				}
-			});
-		});
-	</script> -->
-	<!-- //flexSlider -->
-	<!-- Responsiveslides -->
 	<script src="js/responsiveslides.min.js"></script>
-	<!-- <script>
-		// You can also use "$(window).load(function() {"
-		$(function () {
-			// Slideshow 4
-			$("#slider3").responsiveSlides({
-				auto: true,
-				pager: true,
-				nav: false,
-				speed: 500,
-				namespace: "callbacks",
-				before: function () {
-					$('.events').append("<li>before event fired.</li>");
-				},
-				after: function () {
-					$('.events').append("<li>after event fired.</li>");
-				}
-			});
-
-		});
-	</script> -->
-	<!-- // Responsiveslides -->
-	<!--search-bar-->
-	<!-- <script src="js/main.js"></script> -->
-	<!--//search-bar-->
-
-
-
-<!-- instrute -->
 
       
   </body>
