--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
       <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
       <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-      <title>Institute an Education Category Bootstrap Responsive Website Template | Home :: w3layouts</title>
+      <title>Institute Of Advance Study</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
       <meta name="keywords" content="Institute Responsive web template, Bootstrap Web" />
